<resources>
    <string name="app_name">Dlib Demo</string>

    <string name="url_github">https://github.com/wonderkiln/camerakit-android</string>
    <string name="url_website">http://camerakit.website</string>

    <string name="about_dialog_title">About</string>
    <string name="about_dialog_message">Demo Version: %1$S (%2$d)\nCameraKit Version: %3$S</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to PersonalData -->
    <string name="login">LOGIN</string>
    <string name="register">REGISTRATI</string>
    <string name="terms_conditions">Termini e Condizioni</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="email">Email</string>
    <string name="phone">Cellulare</string>
    <string name="choose">Scegli</string>
    <string name="choose_nation">Seleziona la tua nazione</string>
    <string name="promotional_code">Codice promozionale</string>
    <string name="switch_privacy">Presto il consenso al trattamento dei dati</string>
    <string name="switch_terms">Termini e condizioni</string>
    <string name="cf">Codice fiscale</string>
    <string name="birth_date">Data di nascita</string>
    <string name="empty_field_error_msg">Il campo deve essere valorizzato</string>

    <!--Spinner to Choose a country-->
    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Italy</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <!--Menu items-->
    <string name="gallery_label">Gallery</string>
    <string name="login_label">Login</string>
    <string name="personal_data_label">Profile</string>

    <!--Picture file extension-->
    <string name="image_extension">.jpg</string>

    <string name="self_picture">Self picture</string>
    <string name="disk_request_permission">Please grant disk write permission to allow face detection from picture file.</string>
    <string name="disk_denied_permission">Sorry disk access permission is required for this application to work!</string>
    <string name="camera_request_permission">Please grant camera write permission to allow face detection.</string>
    <string name="camera_denied_permission">Sorry camera permission is required for this application to work!</string>

</resources>
